@@ -1,5 +1,7 @@
 Post v22.12.0
 -------------
+  - ovn-controller: Experimental support for co-hosting multiple controller
+    instances on the same host.
 
 OVN v22.12.0 - 16 Dec 2022
 --------------------------
